force-app/main/default/Lwc with site/objects/Experience__c/Experience__c.object-meta.xml
<CustomObject>
    <label>Experience</label>
    <nameField>
        <displayFormat>Exp-{0000}</displayFormat>
        <label>Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>