force-app/main/default/Lwc with site/objects/Experience__c/fields/Currently_Working__c.field-meta.xml
<CustomField>
    <fullName>Currently_Working__c</fullName>
    <label>Currently Working</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>