force-app/main/default/Lwc with site/objects/Experience__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <type>TextArea</type>
</CustomField>